tests/ui/parser/issues/issue-76437-const.stderr
error: expected one of `async`, `extern`, `fn`, `safe`, or `unsafe`, found keyword `pub`
  --> $DIR/issue-76437-const.rs:4:11
   |
LL |     const pub fn t() {}
   |           ^^^ expected one of `async`, `extern`, `fn`, `safe`, or `unsafe`
   |
help: visibility `pub` must come before `const`
   |
LL |     pub const fn t() {}
   |     ~~~~~~~~~

error: aborting due to 1 previous error

