tests/ui/parser/issues/issue-76437-const.rs
//@ edition:2018

mod t {
    const pub fn t() {}
    //~^ ERROR expected one of `async`, `extern`, `fn`, `safe`, or `unsafe`, found keyword `pub`
    //~| HELP visibility `pub` must come before `const`
}
